# nginx-obs-automatic-low-bitrate-switching

./: .babelrc  .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  app.js  config.json  launch.sh  nginx  nginx.conf  node taskkill.bat  npm install --production.bat  package-lock.json  package.json  stat.xsl
.github/: FUNDING.yml
.github/workflows/: postLatestReleaseTwitter.yml  postTwitterRelease-test.yml  postTwitterRelease.yml  release.yml
config/: config.json  users.json
lib/: app.js
lib/components/: Chat.js  ChatCommands.js  NodeMediaServer.js  ObsSwitcher.js
locales/: de.json  de.yml  dk.json  dk.yml  en.json  en.yml  es.yml  fr.yml  it.yml  nb.yml  nl.yml  pl.yml  pt_br.yml  ptbr.yml  ru.json  ru.yml  sv.yml  tr.json  tr.yml  zh_tw.json  zh_tw.yml
migrations/: 20210426215402_initial.sql
nginx/: nginx.conf  nginx.spacer  start_nginx.bat  stop.bat
nginx/conf/: nginx.conf
nginx/windows firewall/: close.firewall.ports_run.as.admin.bat  open.firewall.ports_run.as.admin.bat
src/: api.rs  app.js  config.rs  db.rs  error.rs  events.rs  lib.rs  main.rs  noalbs.rs  state.rs  switcher.rs  twitch_pubsub.rs  user_manager.rs  web_server.rs  ws.rs
src/api/: mod.rs
src/broadcasting_software/: mod.rs  obs.rs  obs_v5.rs
src/chat/: chat_handler.rs  kick.rs  mod.rs  twitch.rs
src/components/: Chat.js  ChatCommands.js  NodeMediaServer.js  ObsSwitcher.js  globalEvents.js  startMessage.js
src/components/chat/: chatCommands.js  chatController.js
src/components/chat/twitch/: index.js  twitch.js  twitchConnection.js
src/components/database/: database.js  file.js  index.js
src/stream_servers/: belabox.rs  mediamtx.rs  mod.rs  nginx.rs  nimble.rs  nms.rs  obs.rs  rist.rs  sls.rs  xiu.rs
src/ws/: mod.rs  requests.rs  responses.rs  ws_handler.rs
web/: index.html  package-lock.json  package.json  tailwind.config.cjs
web/src/: App.svelte  index.css  main.js  store.js  ws.js
web/src/components/: Input.svelte  InputLogin.svelte  InputSwitch.svelte  SettingsSection.svelte
web/src/routes/: Dashboard.svelte  Home.svelte  Login.svelte
