[package]
name = "noalbs"
version = "2.0.0"
authors = ["Brian Spit <brian@mythenatic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obws = { version = "0.7", features = ["events"] }
tokio = { version = "1.2", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
reqwest = "0.11.0"
serde_json = "1.0"
serde = "1.0"
quick-xml = { version = "0.21", features = ["serialize"] }
async-trait = "0.1"
async-ctrlc = "1.2"
log = "0.4.14"
pretty_env_logger = "0.4"
alto_logger = "0.3"
twitch-irc = "2.2"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
actix-web = "4.0.0-beta.6"
typetag = "0.1"
