[package]
name = "noalbs"
version = "2.5.0"
authors = ["Brian Spit <brian@715209.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argon2 = "0.3"
async-trait = "0.1"
base64 = "0.13"
dotenv = "0.15"
fuse-rust = "0.3"
futures-util = "0.3"
obws = { version = "0.8", features = ["events"] }
quick-xml = { version = "0.22", features = ["serialize"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.10", features = ["rt", "rt-multi-thread", "macros", "signal", "time", "sync"] }
tokio-stream = "0.1"
twitch-irc = "3.0"
typetag = "0.1"

# sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }

log = "0.4"
pretty_env_logger = "0.4"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

warp = "0.3"

lazy_static = "1.4"
rust-i18n = "0.5"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "=0.10.38", features = ["vendored"] }
