[package]
name = "noalbs"
version = "2.7.3"
authors = ["Brian Spit <brian@715209.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argon2 = "0.4"
async-recursion = "1.0.0"
async-trait = "0.1"
base64 = "0.21"
dotenv = "0.15"
either = { version = "1.6.1", features = ["serde"] }
futures-util = "0.3"
obws = { version = "0.9", features = ["events"] }
obwsv5 = { version = "0.10.0", package = "obws", features = ["events"]}
quick-xml = { version = "0.26", features = ["serialize"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
strsim = "0.10.0"
thiserror = "1.0"
tokio = { version = "1.10", features = ["rt", "rt-multi-thread", "macros", "signal", "time", "sync"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.18", features = [ "native-tls" ] }
twitch-irc = "5.0"
typetag = "0.2"

# sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }

log = "0.4"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }

warp = "0.3"

once_cell = "1.10"
rust-i18n = "1.0"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "=0.10.48", features = ["vendored"] }
